added link for check icon.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,10 @@ textarea:focus {
 
 .hideMessage {
   visibility: hidden;
-  color: #ff6961;
+  color: #b10a01;
 }
 code {
-  color: #ff6961;
+  color: #b10a01;
 }
 .green {
   color: #074407;
